--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ freezegun = "^1.2.2"
 doit = "^0.36.0"
 build = "^0.10.0"
 
+[tool.poetry.scripts]
+mdinfo = "mdinfo.__main__:cli"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
