--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ rich = "^13.3.1"
 textX = "^3.1.1"
 tinytag = "^1.8.1"
 pathvalidate = "^2.5.2"
+datetime-tzutils = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
