Fixes for #4, #5, updated textx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ license = "MIT License"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.13"
 click = "^8.1.3"
 cloup = "^2.0.0.post1"
 "pdfminer.six" = "^20221105"
 pluggy = "^1.0.0"
 python-docx = "^0.8.11"
 rich = "^13.3.1"
-textX = "^3.1.1"
+textX = "^4.0.1"
 tinytag = "^1.8.1"
 pathvalidate = "^2.5.2"
 datetime-tzutils = "^1.0.1"
